// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowX renders 0 1`] = `
Array [
  .c0 {
  overflow-x: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders function 1`] = `
Array [
  .c0 {
  overflow-x: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-x: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders negative number 1`] = `
Array [
  .c0 {
  overflow-x: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-x: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-x: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-x: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-x: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-x: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-x: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-x: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    overflow-x: July;
  }
}

@media April {
  .c0 {
    overflow-x: August;
  }
}

@media January {
  .c0 {
    overflow-x: September;
  }
}

@media April {
  .c0 {
    overflow-x: November;
  }
}

@media June {
  .c0 {
    overflow-x: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-x: July;
  }
}

@media April {
  .c0 {
    overflow-x: August;
  }
}

@media January {
  .c0 {
    overflow-x: September;
  }
}

@media April {
  .c0 {
    overflow-x: November;
  }
}

@media June {
  .c0 {
    overflow-x: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-x: January;
  }
}

@media April {
  .c0 {
    overflow-x: December;
  }
}

@media January {
  .c0 {
    overflow-x: April;
  }
}

@media April {
  .c0 {
    overflow-x: May;
  }
}

@media June {
  .c0 {
    overflow-x: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-x: January;
  }
}

@media April {
  .c0 {
    overflow-x: December;
  }
}

@media January {
  .c0 {
    overflow-x: April;
  }
}

@media April {
  .c0 {
    overflow-x: May;
  }
}

@media June {
  .c0 {
    overflow-x: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders postitive number 1`] = `
Array [
  .c0 {
  overflow-x: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders string 1`] = `
Array [
  .c0 {
  overflow-x: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowX renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-x: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-x: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
